--- a/src/containers/LeadActivityContainer.css
+++ b/src/containers/LeadActivityContainer.css
@@ -9,3 +9,22 @@
     padding: 5px;
     border: solid black 1px;
 }
+
+#instructions {
+    position: absolute;
+    margin: 20px;
+    width: 25%;
+    top: 0;
+    bottom: 20%;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.9);
+    overflow-y: scroll;
+    font-family: sans-serif;
+    font-size: 0.8em;
+    line-height: 2em;
+    z-index: 10;
+  }
+  
+  .duration {
+    font-size: 2em;
+  }
