--- a/src/containers/MetricsContainer.css
+++ b/src/containers/MetricsContainer.css
@@ -1,7 +1,13 @@
+.metrics-page-container {
+    display: flex;
+}
+
+
 .metrics-page {
     display: grid;
-    grid-template-rows: 1fr 1fr 0.25fr;
-    
+    grid-template-rows: 0.05fr 1fr 1fr 0.25fr;
+    border: solid black 1px;
     width: 65%;
     height: 100%;
+    margin: 5px;
 }
