--- a/src/components/CallForm.css
+++ b/src/components/CallForm.css
@@ -1,4 +1,4 @@
-.parent-call-form {
+/* .parent-call-form {
     overflow: hidden;
 }
 
@@ -8,6 +8,7 @@
     margin: auto;
     z-index: 5;
     float: left;
+    color: #cbd4c2;
     
 }
 
@@ -24,15 +25,15 @@
     
   }
 
-  label {
+  .new-call-form label {
 	cursor: pointer;
 	color: #edf2f4;
-	display: block;
-	/* padding: 10px; */
-	margin: px;
+	display: -webkit-inline-box;
+	
+	margin: 1px;
 }
 
-input[type=text], input[type=password] {
+.new-call-form input[type=text], input[type=password] {
 font-family: "Roboto", sans-serif;
   outline: 0;
   background: #edf2f4;
@@ -46,9 +47,9 @@ font-family: "Roboto", sans-serif;
   color: #50514f
   }
   
-  input[type=submit] {
+  .new-call-form input[type=submit] {
     font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
+  
   outline: 0;
   background: #ede3e4;
   width: 100%;
@@ -60,4 +61,9 @@ font-family: "Roboto", sans-serif;
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
-  }
+  } 
+
+  .new-call-form input[type=radio i]  {
+    font-family: "Roboto", sans-serif;
+    margin: 10px 10px 0px 10px;
+  } */
