--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,20 +5,25 @@
     width: 98%;
     background: #edf2f4;
     border-radius: 8px;
-    margin: 4px;
-    
-    
+    margin: 20px 0;
 }
 
 .navbar a {
-    padding: 3px;
+    padding: 7px;
     margin: 5px;
     display: inline;
     font-size: 18px;
-    color: #50514f;
+    color: #30011e;
     font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    text-decoration: none;
     
-    
+}
+
+.navbar a:hover {
+    background-color: #30011e;
+    border-radius: 7px;
+    color: #edf2f4;
 }
 
 .main-page-container {
@@ -28,6 +33,8 @@
 }
 
 #root {
-    width: 70%;
+    width: 80%;
     margin: 0px auto;
+    background: #edf2f4;
+    
 }
