--- a/src/containers/MainContainer.css
+++ b/src/containers/MainContainer.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    border: solid black 1px;
-    
+    border-radius: 7px;
+    margin: 0 10%;
+    background-color: #cbd4c2;
+    color: #30011e;
 }
