--- a/src/containers/LeadActivityContainer.css
+++ b/src/containers/LeadActivityContainer.css
@@ -1,29 +1,83 @@
+.activity-show-page {
+  height: 100%;
+}
+
 .lead-show-page {
     clear: both;
     display: flex;
     justify-content: space-around;
-    border: solid black 1px;
+    /* border: solid black 1px; */
+    margin: 0 140px;
 }
 
 .lead-display {
-  margin: 55px  35px;
+  margin: 35px 45px 35px -25px;
   padding: 10px;
   border: 1px solid black;
   border-radius: 15px;
-  width: 600px;
-  height: 200px;
-  max-width: 600px;
-  max-height: 200px;
+  background-color: rgba(48, 1, 30, 0.8);
+  color: #F9F4F5;
+  max-width: 350px;
+  flex: 2;
+  height: 260px;
+  max-height: 260px;
   text-align: left;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 8px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
+.calls-container {
+  max-width: 200px;
+  flex: 1;
+  max-height: 300px;
+  padding-right: 75px;
+  overflow-y: scroll;
+}
 
+.calls-container h1 {
+  text-align: center;
+  margin-bottom: 5px;
+  font-size: 20px;
+  
+}
+
+.call:nth-child(odd) {
+  background-color: #ede3e4;
+}
+
+.call:nth-child(even) {
+  background-color: #cbd4c2;
+}
+
+.lead-show-page .appointments-container {
+  flex: 2;
+  padding: 25px;
+  max-height: 300px;
+  margin-bottom: 20px;
+  background-color: #F9F4F5;
+  overflow-y: scroll;
+  border-radius: 10px;
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 8px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.lead-show-page .appointments-container h1 {
+  margin-top: 5px;
+  text-align: right;
+}
+
+.lead-show-page .appointments-container .appointment h3 {
+  margin: 5px;
+  padding-left: 30px;
+}
 
 .map-div {
-    margin: 1px;
+    width: 980px;
     padding: 5px;
-    border: solid black 1px;
+    margin: 15px auto;
+    border-radius: 15px;
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 8px 5px 0 rgba(0, 0, 0, 0.24);
 }
+
+
 
 #instructions {
     position: absolute;
@@ -31,15 +85,35 @@
     width: 25%;
     top: 0;
     bottom: 20%;
+    max-height: 500px;
     padding: 20px;
-    background-color: rgba(199, 184, 184, 0.9);
+    color: #edf2f4;
+    background-color: rgba(48, 1, 30, 0.9);
     overflow-y: scroll;
     font-family: sans-serif;
     font-size: 0.8em;
     line-height: 2em;
     z-index: 10;
+    font-weight: bold;
+    border-radius: 15px;
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 8px 5px 0 rgba(0, 0, 0, 0.24);
   }
   
   .duration {
     font-size: 2em;
   }
+
+  p.special:hover {
+    background-color: #ede3e4;
+    border-radius: 4px;
+    color: #30011e;
+    font-weight: bold;
+    font-size: 21px;
+  }
+
+  h3.special:hover {
+    background-color: #ede3e4;
+    border-radius: 8px;
+    
+  }
+
