--- a/src/containers/MetricsContainer.css
+++ b/src/containers/MetricsContainer.css
@@ -1,13 +1,63 @@
-.metrics-page-container {
+.metrics-page {
     display: flex;
 }
 
-
-.metrics-page {
-    display: grid;
-    grid-template-rows: 0.05fr 1fr 1fr 0.25fr;
-    border: solid black 1px;
-    width: 65%;
-    height: 100%;
-    margin: 5px;
+.weekly-appointments-metric {
+    flex: 2;
+    height: 400px;
+    margin: 15px;
+    margin-top: 270px;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: rgba(249, 244, 194, 0.3);
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 8px 5px 0 rgba(0, 0, 0, 0.24);
 }
+
+.weekly-appointments-metric h3 {
+    text-align: center;
+    margin-bottom: 5px;
+    color: #30011e;
+    
+}
+
+.weekly-presentation-metric {
+    flex: 2;
+    height: 400px;
+    margin: 15px;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: rgba(249, 244, 194, 0.3);
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 8px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+.weekly-presentation-metric h3 {
+    text-align: center;
+    margin-bottom: 5px;
+    color: #30011e;
+}
+
+.ratios {
+    text-align: left;
+    padding: 40px;
+    flex: 1;
+    border-radius: 15px;
+    max-width: 400px;
+    background-color: rgba(249, 244, 194, 0.3);
+    color: #30011e;
+    float: right;
+    margin-right: 220px;
+    margin-top: -200px;
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2), 0 8px 5px 0 rgba(0, 0, 0, 0.24);
+    margin-bottom: 45px;
+}
+
+.ratios h1 {
+    text-align: center;
+}
+
+.ratios h5 {
+    text-align: center;
+    font-weight: bold;
+    font-size: 16px;
+}
+
